--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - master
   schedule:
-  - cron: "40 17 * * *"
+  - cron: "52 14 * * *"
 jobs:
   auto_commit:
     runs-on: ubuntu-latest
@@ -30,4 +30,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           directory: "."
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.MY_GITHUB_TOKEN }}
