--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -30,4 +30,4 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           directory: "."
-          github_token: ${{ secrets.MY_GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
