--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -5,15 +5,16 @@ on:
     branches:
       - master
   schedule:
-  - cron: "09 15 * * *"
+    - cron: "09 15 * * *"
+
 jobs:
   auto_commit:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3      
         with:
-         persist-credentials: false
-         fetch-depth: 0
+          persist-credentials: false
+          fetch-depth: 0
       - name: Set date variable
         run: |
           echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
@@ -21,11 +22,11 @@ jobs:
         run: |
           echo $date > CURRENT_DATE
       - name: Commit
-        run: |          
+        run: |
           git config --local user.email "${{ secrets.EMAIL }}"
           git config --local user.name "DmitriiSednev"
           git add -A
-          git commit -m "commit of $date"
+          git commit -m "commit of $date" || echo "No changes to commit"
       - name: Push
         uses: ad-m/github-push-action@master
         with:
